# qrcode-wasm

./: Cargo.toml  LICENSE_MIT  publish.sh
examples/benchmark/: main.js  package.json
src/: lib.rs
tests/: node.rs  web.rs
