[package]
name = "qrcode-wasm"
version = "0.0.1-beta.11"
authors = ["wangyang <wy27520@gamil.com>"]
edition = "2018"
description = "rust qrcode wasm"
repository = "https://github.com/mzzya/qrcode-wasm"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
# qrcode = { version = "0.14" }
js-sys = "0.3.69"
qrcode-generator = "=5.0.0"
base64 = "0.22.0"
# serde = { version = "1.0.197", features = ["derive"] }
# serde-wasm-bindgen = "0.6.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
